--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         h1 {
             color: #2E8B57;
             font-family: 'Trebuchet MS', sans-serif;
-            font-size: 40px;
+            font-size: 46px;
             text-align: left;
             margin: 20px;
         }
         h2 {
             color: #696969;
-            font-size: 18px;
+            font-size: 16px;
             text-align: left;
             margin: 10px;
         }
@@ -46,7 +46,7 @@
 </head>
 <body>
     <h1>Árboles singulares de Santa Cruz de Tenerife</h1>
-    <h2>Encuentra los 63 árboles singulares de la ciudad canaria en este mapa.</h2>
+    <h2>. Encuentra los 63 árboles singulares de la ciudad canaria en este mapa.</h2>
 
     <iframe src="singular_trees_map.html"></iframe>
 
